--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ print &quot;Hello python&quot;
 
 <p>First, install slidify</p>
 
-<pre><code class="r">require(devtools)
+<pre><code>require(devtools)
 install_github(&quot;ramnathv/slidify&quot;, &quot;dev&quot;) #Slidify isn&#39;t on CRAN, the normal R package manager, so we have to get it directly from Github. Sometimes this doesn&#39;t go as smoothly on Windows, but don&#39;t worry, the internet can help!
 install_github(&quot;ramnathv/slidifyLibraries&quot;, &quot;dev&quot;)
 library(slidify)
